<resources>
    <string name="app_name">GMS</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_sitename">Site Name</string>
    <string name="hint_hostname">Host Name</string>
    <string name="hint_fops">FOPS Technician</string>
    <string name="hint_gc">GC</string>
    <string name="hint_enib">ENIB</string>
    <string name="hint_new_password">Enter New Password</string>
    <string name="hint_current_password">Enter Current Password</string>
    <string name="btn_log_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_next">More</string>
    <string name="btn_submit">Submit</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter minimum eight letter</string>
    <string name="err_msg_chpassword">Enter minimum eight letter</string>
    <string name="err_msg_phone">Enter phone number</string>
    <string name="err_msg_sitename">Enter site name</string>
    <string name="err_msg_hostname">Enter host name</string>
    <string name="err_msg_fops">Enter FOPS technician</string>
    <string name="err_msg_gc">Enter GC</string>
    <string name="err_msg_enib">Enter ENIB</string>
    <string name="err_msg_crnt_pswd">Enter current password</string>
    <string name="err_msg_new_pswd">Enter minimum eight digits</string>
    <string name="forgot_password">Forgot Your Password ?</string>
    <string name="already_account">Already have an account ?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_admin">Admin</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_home">Home</string>
    <string name="nav_cpri">CPRI</string>
    <string name="nav_timesheet">TimeSheet</string>
    <string name="nav_sitelist">SiteList</string>
    <string name="nav_websitelist">WebsiteList</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Dashboard</item>
        <item>WebsiteList</item>
        <item>Timesheet</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>

    <string-array name="nav_item_cpri_titles">
        <item>Dashboard</item>
        <item>WebsiteList</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_home">Home</string>

    <string name="action_logout">Logout</string>


</resources>
