<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/nav_admin" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_cpri"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_cpri" />

        <item
            android:id="@+id/nav_timesheet"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/nav_timesheet" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_logout" />
    </group>

    <!--<item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout-rounded-up-filled"
                android:title="@string/nav_logout" />

        </menu>
    </item>-->

</menu>