<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">



        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_sitelist"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_sitelist" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/logout" />
    </group>

    <!--<item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />

        </menu>
    </item>-->

</menu>