<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cpri.activity.AddSiteInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sitename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/input_sitename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_sitename" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_hostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/input_hostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_hostname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/input_fops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_fops" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_gc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/input_gc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_gc" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_enib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/input_enib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_enib" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:padding="5dp"
            android:layout_gravity="end"
            android:shadowColor="@color/colorAccent"
            android:elevation="5dp"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>
</LinearLayout>
